style: change header background color to prevent overlapping

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@ header.siteHeader {
   top: 0px;
   padding-left: var(--site-edge-margin);
   padding-right: var(--site-edge-margin);
-  background-color: inherit;
+  background-color: var(--background-color);
   text-align: center;
   z-index: 100;
 
@@ -24,4 +24,3 @@ header.siteHeader {
     align-items: stretch;
   }
 }
-
